/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Alejandro Pelaez
 */
package ex44;

import java.util.List;

public class Root {
    // Create list of products since it is a list of products in the json file
    public List<Product> products;
}
